# dolce

./: .env.example  .eslintrc.js  .gitignore  .releaserc.json  .yarnrc.yml  CHANGELOG.md  Dockerfile  IDEAS.md  README.md  components.json  cypress.config.ts  docker-compose.yml  fly.toml  package-lock.json  package.json  pnpm-lock.yaml  pubspec.yaml  pyproject.toml  remix.config.js  remix.env.d.ts  server.ts  tailwind.config.js  tsconfig.json  vercel.json  vitest.config.ts
.github/workflows/: deploy.yml  migrate.yml  release.yml
android/app/: build.gradle
app/: app.css  curious.ts  db.server.ts  entry.client.tsx  entry.server.tsx  filters.ts  image.server.ts  log.server.ts  root.tsx  sanitize.server.ts  session.server.ts  theme.tsx  utils.test.ts  utils.ts
app/atoms/: Accordion.tsx  Alert.tsx  AlertDialog.tsx  Avatar.tsx  Badge.tsx  Button.tsx  Calendar.tsx  Card.tsx  Checkbox.tsx  Collapsible.tsx  (+24 more)
cypress/: .eslintrc.js  tsconfig.json
data-collection/: pyproject.toml
lib/: app.dart  main.dart  product_list_tab.dart  product_row_item.dart  search_tab.dart  shopping_cart_tab.dart
linux/: CMakeLists.txt  my_application.cc
notebooks/: posts.ipynb
prisma/: schema.prisma  seed.ts
public/: fonts.css  reset.css
remix-ui/: .prettierrc.js  .releaserc.json  Dockerfile  cypress.config.ts  fly.toml  package.json  pnpm-lock.yaml
scraper/: .gitignore  README.md  puppeteer.config.js  scrapy.cfg  tsconfig.json
scraping/: README.md  tsconfig.json
scripts/: README.md
svelte-ui/: .env.example  .prettierrc  docker-compose.yml  drizzle.config.ts  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  test.ts  vite.config.ts
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+520 files in other folders)
