[tool.poetry]
name = "dolce"
version = "1.53.0"
description = ""
authors = ["Nicholas Chiang <nicholas.h.chiang@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11.2"
Scrapy = "^2.8.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
pre-commit = "^3.2.1"
pep8-naming = "^0.13.3"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
